# harp.device.sniff-detector

./: .gitignore  .gitmodules  README.md  device.yml
firmware/: CMakeLists.txt  README.md
firmware/inc/: config.h
firmware/src/: main.cpp
hardware/board/sniff_detector/: harp_core_rp2040_w_isolated_usb.kicad_sch  power_supplies.kicad_sch  sensing_front_end.kicad_sch  sma_ttl_out.kicad_sch  sniff_detector.kicad_pcb  sniff_detector.kicad_pro  sniff_detector.kicad_sch
hardware/enclosure/cads/solidworks/: sniff_detector_enclosure.SLDPRT
hardware/enclosure/exports/dxfs/: sniff_detector_enclosure_lid_bottom.DXF  sniff_detector_enclosure_lid_bottom_offset.DXF  sniff_detector_enclosure_lid_top.DXF  sniff_detector_enclosure_lid_top_offset.DXF
hardware/enclosure/exports/stls/: sniff_detector_sides_enclosure.STL
notes/: design_notes.md
software/bonsai/: device.yml
software/bonsai/Generators/: Generators.csproj
software/bonsai/Interface/: AllenNeuralDynamics.SniffDetector.sln
software/bonsai/Interface/AllenNeuralDynamics.SniffDetector/: AllenNeuralDynamics.SniffDetector.csproj  AsyncDevice.Generated.cs  Device.Generated.cs
software/bonsai/Interface/AllenNeuralDynamics.SniffDetector/Properties/: AssemblyInfo.cs
software/pyharp/: read_sensor.py  read_sensor_events.py  wait_for_events.py
